--- a/admin.css
+++ b/admin.css
@@ -86,6 +86,7 @@ form {
 
 form .field {
   width: 310px;
+  min-height: 23px;
   float: left;
   padding: 3px 0 3px 0; }
 form .field.wide {
@@ -227,7 +228,6 @@ a.btn-edit {
 .action a {
   display: block;
   float: left;
-  height: 20px;
   font-size: 12px;
   line-height: 1em;
   padding: 5px 25px 5px 10px;
@@ -235,9 +235,9 @@ a.btn-edit {
   border: none;
   font-weight: bold;
   background: url("images/d3core/action_bg.gif") no-repeat right top;
-  overflow: hidden; }
+  overflow: hidden;
+  height: 10px; }
 .action a:hover {
-  height: 20px;
   font-size: 12px;
   line-height: 1em;
   padding: 5px 25px 5px 10px;
@@ -245,12 +245,12 @@ a.btn-edit {
   border: none;
   font-weight: bold;
   background: url("images/d3core/action_bg.gif") no-repeat right top;
-  overflow: hidden; }
+  overflow: hidden;
+  height: 10px; }
 
 .field input.button {
   cursor: pointer;
   color: #000000;
-  height: 20px;
   font-size: 12px;
   line-height: 1em;
   padding: 5px 25px 5px 10px;
