--- a/visual-admin.css
+++ b/visual-admin.css
@@ -1,5 +1,6 @@
 #inline-preview{
 	visibility: hidden;
+	width:100%;
 	height:0;
 	overflow: hidden;
 }
@@ -17,9 +18,6 @@
 
 .mode-preview #page{
 	width:100%;
-	height:100px;
-	overflow-y: scroll;
-	position: fixed;
 	z-index: 999;
 	bottom: -0px;
 	left:0px;
