--- a/pagefield.scss
+++ b/pagefield.scss
@@ -11,7 +11,7 @@
 	width:120px;
 	float:left;
 	font-weight: bold;
-	color:#4ebfab;
+	color:#ffc72c;
   }
 
   a.lang-switch{
@@ -20,10 +20,11 @@
 	width:20px;
 	float: left;
 	text-decoration: none;
-	color:#4ebfab;
+	color:#ffc72c;
   }
 
-  a.active{
+  a.active,
+  a.lang-switch:hover{
 	color:#b25455;
   }
 }
@@ -46,6 +47,7 @@
 
 #form{
   .pagefield_group{
+	float:left;
 	clear:both;
   }
 
@@ -113,10 +115,6 @@
 	color:$content-headline-color;
   }
 
-  .list tr{
-	border-bottom:#4ebfab dotted 1px;
-  }
-
   .label{
 	width: 120px;
 	float: left;
@@ -136,57 +134,6 @@
 	font-weight:bold;
 	font-size:10px;
 	color:#D5B079;
-  }
-}
-
-.pagefield_group.group{
-  .label{
-	font-style:italic;
-  }
-
-  .group{
-	overflow:auto;
-	padding-bottom:5px;
-	margin-bottom:5px;
-	border-bottom:solid #000 1px;
-  }
-}
-
-.group-item .group{
-  clear:both;
-}
-
-.ordering{
-  A{
-	height:16px;
-	font-weight: bold;
-	font-size: 8px;
-	float:left;
-	display:block;
-  }
-
-  A.btn-order-up,
-  A.btn-order-down{
-	width: 16px;
-	text-indent: -999px;
-  }
-
-  A.btn-order-up:hover,
-  A.btn-order-down:hover{
-	background-color: #B25455;
-  }
-
-  A.item-index{
-	background: #B25455;
-	padding: 0 3px;
-  }
-
-  A.btn-order-up{
-	background: url(images/d3core/action_up.gif) no-repeat;
-  }
-
-  A.btn-order-down{
-	background: url(images/d3core/action_down.gif) no-repeat;
   }
 }
 
@@ -256,6 +203,11 @@
   display: none;
 }
 
+/*visual admin*/
+#form_fields,
+#action-advance{
+
+}
 
 @media screen and (max-width: 670px) {
   #form textarea.textarea{
