--- a/visual-admin.css
+++ b/visual-admin.css
@@ -1,36 +1,43 @@
-#inline-preview{
-	visibility: hidden;
-	width:100%;
-	height:0;
-	overflow: hidden;
-}
+#inline-preview {
+  visibility: hidden;
+  width: 100%;
+  height: 0;
+  overflow: hidden; }
 
-.mode-preview #inline-preview{
-	height:auto;
-	overflow: auto;
-	visibility: visible;
-}
+.mode-preview #inline-preview {
+  height: auto;
+  overflow: auto;
+  visibility: visible; }
 
-.mode-preview #inline-preview iframe{
-	width:100%;
-	height:650px;
-}
+.mode-preview #inline-preview-frame {
+  width: 100%;
+  min-height: 200px;
+  border: 1px dotted #666;
+  border-radius: 10px; }
 
-.mode-preview #page{
-	width:100%;
-	z-index: 999;
-	bottom: -0px;
-	left:0px;
-	background: #FFFFFF;
-	padding:10px;
-}
+.mode-preview #page {
+  width: 100%;
+  z-index: 999;
+  bottom: -0px;
+  left: 0px;
+  background: #FFFFFF;
+  padding: 10px; }
 
-.mode-preview .content{
-	padding:0;
-}
+.mode-preview .content {
+  padding: 0; }
 
-#action-advance{
-	font-weight: bold;
-	float:right;
-	cursor: pointer;
-}
+#action-advance {
+  font-weight: bold;
+  float: right;
+  cursor: pointer; }
+
+body.mode-preview {
+  overflow: hidden; }
+
+.mode-preview #form_fields,
+.mode-preview #output {
+  display: none; }
+.mode-preview #footer-button-group {
+  padding: 0; }
+
+/*# sourceMappingURL=visual-admin.css.map */
