add inherit for visual-admin-preview.css
Signed-off-by: Colin Leung <colin@digi3studio.com>

--- a/visual-admin-preview.css
+++ b/visual-admin-preview.css
@@ -2,13 +2,14 @@
 	display:none;
 }
 
-.inline-input{
+span.inline-input{
 	transition: 0.3s;
 	cursor: pointer;
+	font:inherit;
 }
 
-.show-admin-item .inline-input,
-.inline-input:hover{
+.show-admin-item span.inline-input,
+span.inline-input:hover{
 	background: rgba(0,255,255,0.2);
 }
 
