--- a/visual-admin.css
+++ b/visual-admin.css
@@ -4,28 +4,6 @@
   height: 0;
   overflow: hidden; }
 
-.mode-preview #inline-preview {
-  height: auto;
-  overflow: auto;
-  visibility: visible; }
-
-.mode-preview #inline-preview-frame {
-  width: 100%;
-  min-height: 200px;
-  border: 1px dotted #666;
-  border-radius: 10px; }
-
-.mode-preview #page {
-  width: 100%;
-  z-index: 999;
-  bottom: -0px;
-  left: 0px;
-  background: #FFFFFF;
-  padding: 10px; }
-
-.mode-preview .content {
-  padding: 0; }
-
 #action-advance {
   font-weight: bold;
   float: right;
@@ -34,10 +12,38 @@
 body.mode-preview {
   overflow: hidden; }
 
-.mode-preview #form_fields,
-.mode-preview #output {
+.mode-preview-show {
   display: none; }
+
+.mode-preview #form_fields,
+.mode-preview #output,
+.mode-preview #page-type-selector,
+.mode-preview .headline,
+.mode-preview .subheadline,
+.mode-preview #page hr,
 .mode-preview #footer-button-group {
+  display: none; }
+.mode-preview .mode-preview-show {
+  display: block; }
+.mode-preview #footer-button-group {
+  padding: 0; }
+.mode-preview #inline-preview {
+  height: auto;
+  overflow: auto;
+  visibility: visible; }
+.mode-preview #inline-preview-frame {
+  width: 100%;
+  min-height: 200px;
+  border: 1px dotted #666;
+  border-radius: 10px; }
+.mode-preview #page {
+  width: 100%;
+  z-index: 999;
+  bottom: -0px;
+  left: 0px;
+  background: #FFFFFF;
+  padding: 10px; }
+.mode-preview .content {
   padding: 0; }
 
 /*# sourceMappingURL=visual-admin.css.map */
