--- a/admin.css
+++ b/admin.css
@@ -273,6 +273,12 @@ table.list .view a {
   overflow: hidden;
   text-indent: -900px; }
 
+.pagination-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  display: inline-block;
+  text-align: center; }
+
 /*mobile style*/
 @media screen and (max-width: 670px) {
   body {
